# ded

./: .rustfmt.toml  Cargo.toml  README.md  test.txt
src/: editor.rs  input.rs  main.rs  searchbox.rs
src/editor/: cursor.rs  mod.rs  settings.rs  textarea.rs  viewport.rs
src/textarea/: byte_index.rs  char_slice.rs  cursor.rs  history.rs  indent.rs  mod.rs  textarea.rs  viewport.rs  word.rs
