[package]
name = "ded"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm", "scrolling-regions"] }
crossterm = { version = "0.29.0", default-features = false, features = [
    "windows",
    "events",
    "bracketed-paste",
] }
anyhow = "1.0.98"
regex = "1.11.1"
arboard = { version = "3.5.0", default-features = false, features = [
    "windows-sys",
    "wayland-data-control",
] }
