[package]
name = "ded"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ratatui = { version = "0.29.0", default-features = false, features = [
    "crossterm",
    "scrolling-regions",
] }
crossterm = { version = "0.29.0", default-features = false, features = [
    "windows",
    "events",
    "bracketed-paste",
] }
unicode-width = "0.2.0"
arboard = { version = "3.6.0", default-features = false, features = [
    "windows-sys",
    "wayland-data-control",
] }
regex = "1.11.1"
